# rpa_qt

./: .gitignore  Change_Log.md  README.md  pyproject.toml
rpa_qt/: main_initdb.py  main_web.py  root.py
rpa_qt/backend/: .env.example  web.py
rpa_qt/backend/config/: __init__.py  config.py  database.py  db_pool.py
rpa_qt/backend/frontend/: index2.html  index_gemini.html  index_gemini_raw.html  index_gemini_raw2.html
rpa_qt/backend/frontend/auth/: signup.html  step_login.html  step_login.js
rpa_qt/backend/frontend/du_pont/: du_pont_01.html  du_pont_02.html
rpa_qt/backend/frontend/img_viewer/: img_grid.html  img_grid_v1.html  img_viewer.html  img_viewer.md
rpa_qt/backend/frontend/price_search/: search_v1.html  search_v2.html
rpa_qt/backend/frontend/tmp/: load_spinner.html  load_streaming.html  load_streaming_site_result.html  script.js  search.html  search_by_claude.html  search_by_claude_old.html  sidebar-demo.html  stop_watch.html  style.css
rpa_qt/backend/frontend/tmp_crud/: crud_01.html  modal.html  modal.js  modal_use.html  prompt.md
rpa_qt/backend/frontend/tmp_evoucher_01/: index.html  index.js  prompt.md  signin.html  signup_tailwindcss.html
rpa_qt/backend/frontend/tmp_tabs/: index.html  main.js  tabs.css
rpa_qt/backend/frontend/tmp_tabs/pages/page2/: content.html  content.js
rpa_qt/backend/frontend/tmp_v01/: index.html  index.js
rpa_qt/backend/frontend/tmp_v01/js/: profile.js
rpa_qt/backend/frontend/tmp_v01/pages/: profile.html
rpa_qt/backend/middleware/: auth.py  exception_handler.py  logging.py
rpa_qt/backend/model/: dao_maker.py  dao_stockRecord.py  dao_tradeRecord.py  dao_user.py  models.py  prompt_qt.md  schemas.py
rpa_qt/backend/routers/: auth.py  product_router.py  secure_router.py  user.py
rpa_qt/backend/service/: __init__.py  auth_service.py  user_service.py
rpa_qt/base/: task_base.py
rpa_qt/db/: data_pipe.py  df_utils.py  mock.py  vo.py  簡易會計科目表.xlsx
rpa_qt/fubon/: .env.example  README.md  fubon_auth.py  fubon_trading.py  fubon_webapi.py  fubon_ws.py  sdk_logger.py  tmp_fubon.py  tmp_fubon_webapi.py  tp_sl_gui_v2.py
rpa_qt/fubon/inventory_stop_loss/: info.pkl  requirements.txt  sl_tp_parameter.pkl  tp_sl_gui_v2.py  tp_sl_gui_v3.py  範例說明.md
rpa_qt/fubon/inventory_stop_loss/log/: client.log.20250921  fubon_neo.log.20250921  notify.log.20250921  program.log.20250921
rpa_qt/fubon/inventory_stop_loss_v2/: auto_map.py  prompt.md  strategy_stop_loss.py
rpa_qt/fubon/inventory_stop_loss_v2/log/: client.log.20250921  client.log.20250923  notify.log.20250921  notify.log.20250923  program.log.20250924
rpa_qt/fubon/inventory_stop_loss_v3/: FubonAPI.py  README.md  stratege_stop_loss_v3.py
rpa_qt/fubon/inventory_stop_loss_v3/log/: client.log.20250925  notify.log.20250925
rpa_qt/fubon/log/: client.log.20250914  client.log.20250916  client.log.20250917  client.log.20250921  client.log.20250923  client.log.20250925  notify.log.20250914  notify.log.20250916  notify.log.20250917  notify.log.20250921  notify.log.20250923  notify.log.20250925  program.log.20250914  program.log.20250916  program.log.20250917  program.log.20250921  program.log.20250923
rpa_qt/indicators/: find_support_points.py  find_trendline.py
rpa_qt/price_utils/: coin_price_ws.py  get_symbols.py  price_binance.py  price_yf.py  tw_tickers_big_volume.csv  tw_tickers_detailed.csv  yf_api.py
rpa_qt/simulation/: backtest_0050.py  simulation_0050.py
rpa_qt/tmp_fins/: column_dict.py  get_401.py  get_daliy.py  task_get_data.py  util_file.py
rpa_qt/tmp_message/: telegram_message_api.py
rpa_qt/trading_day/: README.md
rpa_qt/trading_micro_cap/: .env.example  README.md  main_case_01.py  simple_automation.py
rpa_qt/trading_micro_cap/case_01/: ProcessPortfolio.py  chatgpt_portfolio_update.csv  llm_responses.jsonl
rpa_qt/trading_rebound/: README.md  rebound_candidates.csv  tw_rebound_scanner.py  tw_rebound_tracker.py  tw_tickers.txt  tw_tickers_300.txt
rpa_qt/trading_swing/: 2330.TW_equity.csv  2330.TW_trades.csv  README.md  output_equity.csv  swing_01.py  swing_02.py  trading_swing.py
rpa_qt/trading_turnover/: prompt.md  strategy.py  turnover_01.py  turnover_02.py  turnover_02_2.py  turnover_02_3.py  turnover_02_4.py
rpa_qt/trading_turtle/: turtle_02.py
rpa_qt/turtle/: turtle_01.py  turtle_02.py
rpa_qt/utils/: config_yaml_loader.py  invoker.py  logger.py  project_utils.py  selenium_utils.py  time_utils.py
rpa_qt/utils/data/: data_queue.py  tmp.py  vo_crud.py  vo_parser.py
whl/: fubon_neo-2.2.4-cp37-abi3-win_amd64.whl
