[project]
name = "rpa-qt"
version = "0.1.0"
description = ""
authors = [{ name = "Nick Kao", email = "kaonick@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "psutil>=6.1.0,<7",
    "tqdm>=4.67.1,<5",
    "schedule>=1.2.2,<2",
    "webdriver-manager>=4.0.2,<5",
    "chromedriver-autoinstaller>=0.6.4,<0.7",
    "selenium>=4.27.1,<5",
    "seleniumbase>=4.33.11,<5",
    "undetected-chromedriver>=3.5.5,<4",
    "selenium-stealth>=1.0.6,<2",
    "pandas>=2.2.3,<3",
    "pydantic>=2.10.3,<3",
    "tabulate>=0.9.0,<0.10",
    "scikit-learn>=1.4.0,<2",
    "sqlmodel>=0.0.22,<0.0.23",
    "mysql-connector-python>=8.3.0,<9",
    "cx-oracle>=8.3.0,<9",
    "pymssql>=2.2.11,<3",
    "elasticsearch>=8.17.0,<9",
    "lxml>=5.3.0,<6",
    "openpyxl>=3.1.5,<4",
    "html5lib~=1.1",
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.31.0,<0.32",
    "python-logging-loki>=0.3.1,<0.4",
    "websockify>=0.12.0,<0.13",
    "python-telegram>=0.19.0,<0.20",
    "celery>=5.4.0,<6",
    "gevent>=24.11.1,<25",
    "redis>=5.2.1,<6",
    "yfinance>=0.2.65",
    "matplotlib>=3.9.4",
]

[tool.hatch.build.targets.sdist]
include = ["rpa_qt"]

[tool.hatch.build.targets.wheel]
include = ["rpa_qt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
